# airikr

./: .gitignore  README.md  basic_anthropic.py  llama_anthropic.py  llama_main.py  llama_ollama.py  llama_openai.py  pyproject.toml  starter_openai.py
.devcontainer/: devcontainer.json
